@@ -24,5 +24,10 @@
       <artifactId>httpclient</artifactId>
       <version>4.2.5</version>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
 </project>
