@@ -1,3 +1,6 @@
+2013-06-06
+ * fixed nstep focuser
+
 2013-05-28
  * Java JSON bindings (in java directory)
 
